title size on mobile fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -48,7 +48,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: var(--title-font-size);
 }
 
 .title,
@@ -119,3 +119,4 @@
     flex-direction: column;
   }
 }
+
