--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -14,3 +17,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+:root {
+    --title-font-size: 4rem;
+}
+
+@media (max-width: 600px) {
+  :root {
+    --title-font-size: 2rem;
+  }
+}
+
